--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-google-login",
-  "version": "5.1.3",
+  "version": "5.1.4-dev.1",
   "description": "A Google Login Component for React",
   "main": "dist/google-login.js",
   "scripts": {
